--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,6 @@
 <resources>
-    <string name="app_name">MifareStorageApp</string>
     <string name="read_tag_instructions">Чтобы считать информацию с карты, поднесите телефон к карте, как показано на рисунке. Расстояние между картой и телефоном должно быть менее 4 см.</string>
+    <string name="profile_signature_information">Информация о подписе</string>
+    <string name="profile_detailed_information">Детальная информация</string>
+    <string name="profile_basic_information">Базовая информация:</string>
 </resources>
